--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -74,7 +74,7 @@
                 <a asp-area="" asp-controller="CmsHome" asp-action="Index" class="navbar-brand">@WebSite.Name</a>
             </div>
             <div class="navbar-collapse collapse">
-                @Html.Raw(MenuHelper.PrepareMenuHtml(NccMenu.MenuPosition.Navigation))
+                @Html.Raw(MenuHelper.PrepareMenuHtml("Navigation"))
                 @await Html.PartialAsync("_SiteLoginPartial")
             </div>  
         </nav>
