--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/Account/Login.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/Account/Login.cshtml
@@ -21,7 +21,8 @@
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <label asp-for="Email" class="col-md-2 control-label"></label>
+                    @*<label asp-for="Email" class="col-md-2 control-label"></label>*@
+                    <label class="col-md-2 control-label">Username</label>
                     <div class="col-md-10">
                         <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
