--- a/NetCoreCMS.Web/Views/SetupHome/CreateAdmin.cshtml
+++ b/NetCoreCMS.Web/Views/SetupHome/CreateAdmin.cshtml
@@ -68,14 +68,14 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="SiteName">Site Name:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="SiteName" name="SiteName" asp-for="SiteName" placeholder="Enter Site Name">
+                    <input type="text" class="form-control" id="SiteName" name="SiteName" asp-for="SiteName" placeholder="Enter Site Name" value="Website Name">
                     <span asp-validation-for="SiteName" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2" for="Tagline">Tagline:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="Tagline" name="Tagline" asp-for="Tagline" placeholder="Enter Tagline">
+                    <input type="text" class="form-control" id="Tagline" name="Tagline" asp-for="Tagline" placeholder="Enter Tagline" value="Website tag line">
                     <span asp-validation-for="Tagline" class="text-danger"></span>
                 </div>
             </div>
@@ -83,7 +83,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="AdminUserName">Admin UserName:</label>
                 <div class="col-sm-10">
-                    <input asp-for="AdminUserName" type="text" class="form-control" id="AdminUserName" name="AdminUserName" placeholder="Enter Admin UserName">
+                    <input asp-for="AdminUserName" type="text" class="form-control" id="AdminUserName" name="AdminUserName" placeholder="Enter Admin UserName" value="Admin">
                     <span asp-validation-for="AdminUserName" class="text-danger"></span>
                 </div>
             </div> 
@@ -104,7 +104,7 @@
             <div class="form-group">
                 <label class="control-label col-sm-2" for="Email">Email:</label>
                 <div class="col-sm-10">
-                    <input asp-for="Email" type="Email" class="form-control" id="Email" name="Email" placeholder="Enter Email">
+                    <input asp-for="Email" type="Email" class="form-control" id="Email" name="Email" placeholder="Enter Email" value="admin@site.com">
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
             </div>            
@@ -113,7 +113,7 @@
                 <div class="col-sm-10">
                     <select asp-for="SetupTemplate" type="text" class="form-control" id="SetupTemplate" name="SetupTemplate">
                         <option value="">Select your template</option>
-                        <option value="Basic">Basic</option>
+                        <option value="Basic" selected>Basic</option>
                         @*<option value="Blog">Blog</option>
                         <option value="PersonalProfile">Personal Profile</option>
                         <option value="CompanyWebsite">Company Website</option>
