new menu position changed

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
@@ -56,11 +56,11 @@
                     </select>
                 </div>
                 <div class="col-sm-4">
-                    <input type="button" id="saveMenuBtn" value="Save Menu" class="btn btn-sm btn-default pull-right" />                    
                     @if (currentMenu.Id > 0)
                     {
-                        <a class="btn btn-sm btn-success pull-right" style="margin-right:5px;" href="/CmsMenu">New Menu</a>
+                        <a class="btn btn-sm btn-outline btn-success pull-right" style="margin-left:5px;" href="/CmsMenu">New Menu</a> 
                     }
+                    <input type="button" id="saveMenuBtn" value="Save Menu" class="btn btn-sm btn-outline btn-primary pull-right" />                    
                 </div>
 
                 <div style="clear:both;"></div>
