Working on page

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsMenu/Partial/_MenuSelectionTree.cshtml
@@ -13,45 +13,16 @@
                 <div class="col-sm-4">
                     <select id="menuLocation" class="form-control input-sm">
                         <option value="">Menu Location</option>
-                        @if (currentMenu.Id > 0 && currentMenu.Position == "Top")
+                        @foreach (var menuLocation in ViewBag.MenuLocations)
                         {
-                            <option value="Top" selected>Top</option>
-                        }
-                        else
-                        {
-                            <option value="Top">Top</option>
-                        }
-                        @if (currentMenu.Position == "Navigation")
-                        {
-                            <option value="Navigation" selected>Navigation</option>
-                        }
-                        else
-                        {
-                            <option value="Navigation">Navigation</option>
-                        }
-                        @if (currentMenu.Position == "Left")
-                        {
-                            <option value="Left" selected>Left</option>
-                        }
-                        else
-                        {
-                            <option value="Left">Left</option>
-                        }
-                        @if (currentMenu.Position == "Right")
-                        {
-                            <option value="Right" selected>Right</option>
-                        }
-                        else
-                        {
-                            <option value="Right">Right</option>
-                        }
-                        @if (currentMenu.Position == "Footer")
-                        {
-                            <option value="Footer" selected>Footer</option>
-                        }
-                        else
-                        {
-                            <option value="Footer">Footer</option>
+                            if (currentMenu.Id > 0 && currentMenu.Position == menuLocation)
+                            {
+                                <option value="@menuLocation" selected>@menuLocation</option>
+                            }
+                            else
+                            {
+                                <option value="@menuLocation">@menuLocation</option>
+                            }
                         }
                     </select>
                 </div>
