--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Manage.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Manage.cshtml
@@ -22,16 +22,40 @@
             <div class="panel-body">
                 <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
-                        <tr><th>Title</th><th>Author</th><th>PublishDate</th><th>Status</th><th>Order</th><th>Action</th></tr>
+                        <tr>
+                            <th>Title</th>
+                            <th>Slug</th>
+                            <th>Parent</th>
+                            <th>Author</th>
+                            <th>Status</th>
+                            <th>Layout</th>
+                            <th>Visibility</th>
+                            <th>PublishDate</th>
+                            <th>Order</th>
+                            <th>Action</th>
+                        </tr>
                     </thead>
                     <tbody>
                         @foreach (var page in Model)
                         {
                             <tr>
                                 <td>@page.Title</td>
+                                <td>@page.Slug</td>
+                                <td>
+                                    @if (page.Parent != null)
+                                    {
+                                        <span>@page.Parent.Title</span>
+                                    }
+                                    else
+                                    {
+                                        <span>-</span>
+                                    }
+                                </td>
                                 <td>@page.CreateBy</td>
-                                <td>@page.PublishDate</td>
                                 <td>@page.PageStatus</td>
+                                <td>@page.Layout</td>
+                                <td>@page.PageType</td>
+                                <td>@page.PublishDate</td>
                                 <td>@page.PageOrder</td>
                                 <td>
                                     <a asp-controller="CmsPage" asp-action="CreateEdit" asp-route-id="@page.Id">Edit</a> |
