--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Manage.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Manage.cshtml
@@ -4,7 +4,7 @@
 @{
     Layout = Constants.AdminLayoutName;
     ViewData["PageTitle"] = "Page Manage";
-    ViewData["PageSubtitle"] = "Manage pages";
+    ViewData["PageSubtitle"] = "Manage existing pages";
 }
 
 <script src="~/lib/ckeditor/ckeditor.js"></script>
