--- a/NetCoreCMS.Web/Views/SetupHome/Index.cshtml
+++ b/NetCoreCMS.Web/Views/SetupHome/Index.cshtml
@@ -86,21 +86,21 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="DatabaseHost">Database Host:</label>
                     <div class="col-sm-10">
-                        <input asp-for="DatabaseHost" type="text" class="form-control" id="DatabaseHost" name="DatabaseHost" placeholder="Enter Database Host">
+                        <input asp-for="DatabaseHost" type="text" class="form-control" id="DatabaseHost" name="DatabaseHost" placeholder="Enter Database Host" value="localhost">
                         <span asp-validation-for="DatabaseHost" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="DatabasePort">Database Port:</label>
                     <div class="col-sm-10">
-                        <input asp-for="DatabasePort" type="text" class="form-control" id="DatabasePort" name="DatabasePort" placeholder="Enter Database Port">
+                        <input asp-for="DatabasePort" type="text" class="form-control" id="DatabasePort" name="DatabasePort" placeholder="Enter Database Port" value="3306">
                         <span asp-validation-for="DatabasePort" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="DatabaseUserName">Database UserName:</label>
                     <div class="col-sm-10">
-                        <input asp-for="DatabaseUserName" type="text" class="form-control" id="DatabaseUserName" name="DatabaseUserName" placeholder="Enter Database UserName">
+                        <input asp-for="DatabaseUserName" type="text" class="form-control" id="DatabaseUserName" name="DatabaseUserName" placeholder="Enter Database UserName" value="root">
                         <span asp-validation-for="DatabaseUserName" class="text-danger"></span>
                     </div>
                 </div>
@@ -114,7 +114,7 @@
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="DatabaseName">Database Name:</label>
                     <div class="col-sm-10">
-                        <input asp-for="DatabaseName" type="text" class="form-control" id="DatabaseName" name="DatabaseName" placeholder="Enter Database Name">
+                        <input asp-for="DatabaseName" type="text" class="form-control" id="DatabaseName" name="DatabaseName" placeholder="Enter Database Name" value="netcore_cms">
                         <span asp-validation-for="DatabaseName" class="text-danger"></span>
                     </div>
                 </div>   
