--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/CreateEdit.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/CreateEdit.cshtml
@@ -42,7 +42,7 @@
                                     <span asp-validation-for="Title" class="text-danger"></span>
                                 </div>
                                 <div class="form-group input-group">
-                                    <span class="input-group-addon">http://yourdomain.com/CmsPage/</span>
+                                    <span class="input-group-addon">@ViewBag.DomainName</span>
                                     <input type="text" class="form-control" id="Slug" name="Slug" asp-for="Slug" placeholder="Slug">
                                     <span asp-validation-for="Slug" class="text-danger"></span>
                                 </div>
