--- a/NetCoreCMS.Web/Themes/Default/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Views/CmsPage/Index.cshtml
@@ -14,7 +14,7 @@
     ViewData["PageSubtitle"] = "Manage pages";
     ViewData["Title"] = Model.Title;
 }
- 
+ HELLLLLLL
 <div class="row">
     <div class="col-lg-12"> 
         <p>
