--- a/NetCoreCMS.Web/Themes/Default/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Views/_ViewImports.cshtml
@@ -3,4 +3,11 @@
 @using NetCoreCMS.Core.Modules.Cms.Models.AccountViewModels
 @using NetCoreCMS.Core.Modules.Cms.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
+
+@using NetCoreCMS.Framework.Utility
+@using NetCoreCMS.Framework.Modules
+@using NetCoreCMS.Framework.Modules.Widgets
+@using NetCoreCMS.Framework.Core.Models
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
