Working on default theme - top header

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsHome/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsHome/Index.cshtml
@@ -2,7 +2,10 @@
 @{
     Layout = Constants.SiteLayoutName;
 }
+<div>
 
+</div>
+<!--
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -107,3 +110,4 @@
         </ul>
     </div>
 </div>
+-->
