--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -134,12 +134,12 @@
         <!-- Zone TOP End-->
         
         <!-- Full Width Slider Start -->
-        <div class="fullWidthSlider">
+        <div>
             @{
                 var fullWidthSlider = GlobalConfig.WebSiteWidgets.Where(x => x.Zone == "FullWidthSlider" && x.LayoutName == "SiteLayout").ToList();
                 if (fullWidthSlider != null && fullWidthSlider.Count > 0)
                 {
-                    <div style="width:100%;">
+                    <div class="fullWidthSlider">
                         @foreach (var item in fullWidthSlider)
                         {
                             var widgets = GlobalConfig.Widgets.Where(x => x.WidgetId == item.WidgetId).ToList();
